<resources>
    <string name="app_name">DiabetesApp</string>
    <string name="mg_dl">mg/dL</string>
    <string name="new_note">New note</string>
    <string name="add">Add</string>
    <string name="no_data_available">No data available</string>
    <string name="pick_data">Pick data</string>
    <string name="pick_time">Pick time</string>
    <string name="additional_information">Additional Information</string>
    <string name="sugar_level">Sugar level</string>
    <string name="apply">Apply</string>
    <string name="open_menu">Open menu</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="diabetes">Diabetes</string>
    <string name="pick_date">Pick date</string>
    <string name="input_your_number">Input your number</string>
    <string name="date_and_time">Date and Time</string>
    <string name="statistics">Statistics</string>
    <string name="date_time_format">%1$s %2$s</string>
    <string name="help">Help</string>
    <string name="select_time">Select Time</string>
    <string name="set_alarm">Set alarm</string>
    <string name="cancel_alarm">Cancel alarm</string>
    <string name="alarm">Alarm</string>
    <string name="repeat">Repeat</string>
</resources>